0.1.3
- Remove pattern of using new to create new entries
- Support using entries as prototypes of other entries

0.1.2
- Add ephemeral() for transient collection object properties
- Document calculable() for properties that can be set directly or calculated