@@ -282,6 +282,12 @@ function reset() {
     load(false);
 }
 
+// Map in new entry types after database started
+function liveMap(key, file) {
+    map(key, file);
+    prototize(key, files[key]); 
+}
+
 function repl(file, refs) {
     var i;
     dbFile = file || dbFile;
@@ -300,13 +306,15 @@ function repl(file, refs) {
     context.save = save;
     context.reset = reset;
     context.recode = context.rc = loadCode;
-    context.map = map;
+    context.liveMap = liveMap;
     context.context = context;
 }
+
 
 exports.map = map;
 exports.load = load;
 exports.repl = repl;
+exports.liveMap = liveMap;
 exports.save = save;
 exports.reset = reset;
 exports.recode = exports.rc = loadCode;
