@@ -1,6 +1,7 @@
 0.1.3
+- Add liveMap() for mapping new collections after repl() or load()
+- Add using objects as persisted prototypes of other objects in same collection
 - Remove pattern of using new to create new entries
-- Support using entries as prototypes of other entries
 
 0.1.2
 - Add ephemeral() for transient collection object properties
